# MAI_OS_Labs

./: README.md
KP-var2/: CMakeLists.txt
KP-var2/include/: ClientApp.h  GameLogic.h  ServerApp.h  protocol.h  wrappers.h
KP-var2/report/src/: benchmark.tex  literature.tex  problem.tex  src.tex  thinks.tex  titlepage.tex
KP-var2/src/client/: ClientApp.cpp  client_main.cpp
KP-var2/src/game/: GameLogic.cpp
KP-var2/src/server/: ServerApp.cpp  server_main.cpp
lab1-var4/include/: child.h  exceptions.h  os.h  parent.h
lab1-var4/report/src/: benchmark.tex  literature.tex  problem.tex  src.tex  thinks.tex  titlepage.tex
lab1-var4/src/: child.cpp  os.cpp  parent.cpp
lab2-var15/: CMakeLists.txt  main.cpp
lab2-var15/include/: deck.h  monte_carlo_card.h
lab2-var15/report/src/: benchmark.tex  literature.tex  problem.tex  src.tex  thinks.tex  titlepage.tex
lab2-var15/src/: deck.cpp  monte_carlo_card.cpp
lab3-var4/: CMakeLists.txt  main.cpp
lab3-var4/include/: child.h  exceptions.h  os.h  parent.h
lab3-var4/report/src/: benchmark.tex  literature.tex  problem.tex  src.tex  thinks.tex  titlepage.tex
lab3-var4/src/: child.cpp  os.cpp  parent.cpp
lab4-var25/: CMakeLists.txt
lab4-var25/apps/: main_link.cpp  main_link_alt.cpp  main_runtime.cpp
lab4-var25/include/: gcf.h  translation.h
lab4-var25/include/platform/: dynlib.h
lab4-var25/report/src/: benchmark.tex  literature.tex  problem.tex  src.tex  thinks.tex  titlepage.tex
lab4-var25/src/: gcf_euclid.cpp  gcf_naive.cpp  translation_binary.cpp  translation_ternary.cpp
lab4-var25/src/platform/: dynlib.cpp
lab5-var25/report/src/: benchmark.tex  literature.tex  src.tex  thinks.tex  titlepage.tex
